feat: Added interface modes